feature: filtragem e paginação no backend
Adicionadas features de paginação, definição do tamanho e filtragem de tarefas no backend.